@@ -1,3 +1,8 @@
+2008-08-25  Mirco Bauer <meebey@meebey.net> 
+
+	* Engine.cs: Fixed switching between local engine and remote engine back and
+	  forth. (closes trac bug #106)
+
 2008-08-24  Mirco Bauer <meebey@meebey.net> 
 
 	* Messages/UrlMessagePartModel.cs: Fallback to HTTP.
